--- a/sass/bem/btn-start.scss
+++ b/sass/bem/btn-start.scss
@@ -1,7 +1,7 @@
 .btn-start {
   border-bottom: 4px solid $color-f2;
   color: $font-color-silver;
-  font-size: 16px;
+  font-size: 1.125em;
   line-height: 22px;
   padding: 9px 10px;
   text-align: center;
