--- a/sass/bem/buttons.scss
+++ b/sass/bem/buttons.scss
@@ -3,12 +3,12 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  min-height: 40px;
+  min-height: 50px;
   text-transform: uppercase;
   color: $color-33;
   font-weight: 700;
-  border-radius: 5px;
-  margin-bottom: 8px;
+  font-size: 1.125em;
+  border-radius: 3px;
 
   &--yellow {
     border: 1px solid $u-orange;
@@ -21,14 +21,19 @@
   }
 
   &--vk {
-    border: 1px solid $silver-big;
-    background-color: $u-white;
+    border: 1px solid $color-vk;
+    background-color: $color-vk;
+    color: #fff;
+
+    svg {
+      margin-top: 2px;
+    }
   }
 
   &--auto {
     width: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 22px;
+    padding-right: 22px;
   }
 
   &--sm {
