--- a/sass/blocks/form-control.scss
+++ b/sass/blocks/form-control.scss
@@ -1,10 +1,10 @@
 .input {
   width: 100%;
-  height: 40px;
-  padding: 10px 12px;
+  height: 50px;
+  padding: 10px 20px;
   border: 1px solid $silver-big;
   border-radius: 5px;
-  font-size: 14px;
+  font-size: 1em;
   color: $color-33;
 
   &--muted {
@@ -22,7 +22,7 @@
 }
 
 .input-text {
-  font-size: 14px;
+  font-size: 1em;
   line-height: 25px;
 }
 
@@ -41,7 +41,7 @@
   position: relative;
   display: inline-flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 1em;
 
   &__icon {
     flex-shrink: 0;
@@ -77,7 +77,7 @@
   display: flex;
 
   &__day {
-    width: 50px;
+    width: 80px;
     flex-shrink: 0;
   }
   &__month {
@@ -85,7 +85,7 @@
     margin: 0 10px;
   }
   &__year {
-    width: 100px;
+    width: 120px;
     flex-shrink: 0;
   }
 }
