--- a/sass/blocks/menu.scss
+++ b/sass/blocks/menu.scss
@@ -13,17 +13,28 @@
     justify-content: center;
   }
   &__item {
-    padding: 0 4px;
+    padding: 0 7px;
+
+    @media screen and (max-width: 380px) {
+      padding: 0 5px;
+    }
+    @media screen and (max-width: 361px) {
+      padding: 0 4px;
+    }
   }
   &__link {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 40px;
-    height: 40px;
+    width: 3.125em;
+    height: 3.125em;
     border-radius: 3px;
     background-color: #fff;
+
+    svg {
+      max-width: 70%;
+    }
   }
   &__warning {
     position: absolute;
