--- a/sass/blocks/wallet.scss
+++ b/sass/blocks/wallet.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  padding: 20px 15px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
   background-color: $silver-normal;
