--- a/sass/libs/helpers.scss
+++ b/sass/libs/helpers.scss
@@ -1,5 +1,5 @@
 small, .small {
-  font-size: 10px;
+  font-size: .875em;
 }
 .d-none {
     display: none;
@@ -120,7 +120,7 @@ small, .small {
 }
 .text {
   margin: 0;
-  font-size: 14px;
+  font-size: 1em;
   line-height: 16px;
 }
 .font-400 {
