--- a/sass/page/sign-in.scss
+++ b/sass/page/sign-in.scss
@@ -1,9 +1,17 @@
+.sign-in-page {
+  padding: 60px 0 30px;
+
+  @media screen and (max-width: 374.5px) {
+    padding: 30px 0;
+  }
+}
+
 .sign-in-form {
   padding-top: 35px;
 }
 
 .welcome-img {
-  padding: 44px 0 10px;
+  padding: 50px 0 30px;
   text-align: center;
 
   svg {
