--- a/sass/standarts/main.scss
+++ b/sass/standarts/main.scss
@@ -14,6 +14,11 @@ body {
     min-height: 100vh;
   }
 }
+@media screen and (max-width: 374.5px) {
+  body {
+    font-size: 13px;
+  }
+}
 
 a {
   text-decoration: none;
