--- a/sass/standarts/variables.scss
+++ b/sass/standarts/variables.scss
@@ -24,7 +24,7 @@ $silver-large: #f0f0f0;
 $silver-big: #e5e5e5;
 $silver-error: #d8d8d8;
 
-$color-vk: #2875a8;
+$color-vk: #436EAB;
 $color-blue: #3787FF;
 $color-sber: #1a9f29;
 $color-western: #f2d123;
