--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,6 +30,10 @@
 @import "blocks/wallet";
 @import "blocks/address";
 @import "blocks/tooltip";
+@import "blocks/search";
+@import "blocks/filter";
+@import "blocks/transaction";
+@import "blocks/messages";
 
 /*Страницы*/
 @import "page/sign-in";
