--- a/sass/bem/buttons.scss
+++ b/sass/bem/buttons.scss
@@ -21,9 +21,7 @@
   }
 
   &--vk {
-    border: 1px solid $color-vk;
-    background-color: $color-vk;
-    color: #fff;
+    border: 1px solid $silver-big;
 
     svg {
       margin-top: 2px;
@@ -32,8 +30,8 @@
 
   &--auto {
     width: auto;
-    padding-left: 22px;
-    padding-right: 22px;
+    padding-left: 1.1em;
+    padding-right: 1.1em;
   }
 
   &--sm {
