--- a/sass/bem/titles.scss
+++ b/sass/bem/titles.scss
@@ -1,7 +1,7 @@
 .title {
   margin: 0;
-  font-size: 16px;
-  line-height: 18px;
+  font-size: 1.125em;
+  line-height: 1;
   font-weight: 700;
   text-transform: uppercase;
 }
