--- a/sass/blocks/form-control.scss
+++ b/sass/blocks/form-control.scss
@@ -1,11 +1,15 @@
 .input {
   width: 100%;
   height: 50px;
-  padding: 10px 20px;
+  padding: 10px 12px;
   border: 1px solid $silver-big;
   border-radius: 5px;
   font-size: 1em;
   color: $color-33;
+
+  &--select {
+    height: 40px;
+  }
 
   &--muted {
     color: $font-color-silver;
@@ -33,7 +37,7 @@
   flex-wrap: wrap;
 
   &__item {
-    flex-basis: calc(50% - 5px);
+    flex-basis: calc(50% - 6px);
   }
 }
 
@@ -76,6 +80,9 @@
 .date-group {
   display: flex;
 
+  & > * {
+    position: relative;
+  }
   &__day {
     width: 80px;
     flex-shrink: 0;
@@ -88,4 +95,11 @@
     width: 120px;
     flex-shrink: 0;
   }
+}
+
+.select-icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
 }
