--- a/sass/blocks/menu.scss
+++ b/sass/blocks/menu.scss
@@ -3,7 +3,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  padding: 10px;
+  padding: 10px 10px 20px;
   background-color: $silver-normal;
   border-radius: 10px 10px 0 0;
   z-index: 99;
@@ -49,5 +49,5 @@
 }
 
 .menu-padding {
-  padding-bottom: 60px;
+  padding-bottom: 70px;
 }
