--- a/sass/blocks/user.scss
+++ b/sass/blocks/user.scss
@@ -1,12 +1,12 @@
 .user {
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 1em;
 
   &__img {
     flex-shrink: 0;
-    width: 40px;
-    height: 40px;
+    width: 70px;
+    height: 70px;
     margin-right: 13px;
     border-radius: 50%;
   }
@@ -15,8 +15,7 @@
     align-items: center;
     margin-bottom: 5px;
   }
-  svg {
-    margin-left: 5px;
-    vertical-align: middle;
+  .icon-btn {
+    margin-left: 20px;
   }
 }
