--- a/sass/libs/helpers.scss
+++ b/sass/libs/helpers.scss
@@ -7,6 +7,9 @@ small, .small {
 .d-flex {
   display: flex;
 }
+.flex-column {
+  flex-direction: column;
+}
 .align-end {
   align-items: flex-end;
 }
@@ -42,6 +45,9 @@ small, .small {
 }
 .text-uppercase {
   text-transform: uppercase;
+}
+.height-100 {
+  height: 100vh;
 }
 
 .input-hide {
@@ -84,6 +90,9 @@ small, .small {
 .mr-10 {
   margin-right: 10px!important;
 }
+.pt-10 {
+  padding-top: 10px;
+}
 .p-20 {
   padding: 20px!important;
 }
@@ -111,6 +120,12 @@ small, .small {
 .pb-25 {
   padding-bottom: 25px!important;
 }
+.pt-30 {
+  padding-top: 30px;
+}
+.mb-40 {
+  margin-bottom: 40px;
+}
 
 .color-red {
   color: $font-color-red;
@@ -122,6 +137,10 @@ small, .small {
   margin: 0;
   font-size: 1em;
   line-height: 16px;
+
+  &--muted {
+    color: $font-color-silver;
+  }
 }
 .font-400 {
   font-weight: 400;
