--- a/sass/page/create-account.scss
+++ b/sass/page/create-account.scss
@@ -1,5 +1,6 @@
 .create-account-page {
-  padding-top: 60px;
+  padding-top: 50px;
+  padding-bottom: 20px;
 }
 .form-copyright {
   margin-top: 15px;
