--- a/sass/bem/icon-btn.scss
+++ b/sass/bem/icon-btn.scss
@@ -2,6 +2,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
   width: 30px;
   height: 30px;
   padding: 0;
@@ -9,4 +10,15 @@
   border: 0;
   border-radius: 3px;
   background-color: $color-f5;
+  
+  &--white {
+    background-color: #fff;
+  }
+
+  &:disabled {
+
+    svg {
+      opacity: .45;
+    }
+  }
 }
