--- a/sass/blocks/logo.scss
+++ b/sass/blocks/logo.scss
@@ -11,13 +11,10 @@
 
 .small-logo {
   display: flex;
-  align-items: center;
   margin-bottom: 22px;
 
-  &__img {
-    width: 13px;
-    height: 15px;
+  svg {
     margin-right: 5px;
-    margin-top: -3px;
+    flex-shrink: 0;
   }
 }
