--- a/sass/blocks/menu.scss
+++ b/sass/blocks/menu.scss
@@ -35,19 +35,16 @@
     svg {
       max-width: 70%;
     }
-  }
-  &__warning {
-    position: absolute;
-    right: 5px;
-    top: 3px;
-    display: block;
-    width: 7px;
-    height: 7px;
-    background-color: $font-color-red;
-    border-radius: 50%;
+
+    &.identifier::after {
+      width: 7px;
+      height: 7px;
+      top: 4px;
+      right: 5px;
+    }
   }
 }
 
 .menu-padding {
-  padding-bottom: 70px;
+  padding-bottom: 80px;
 }
