--- a/sass/blocks/menu.scss
+++ b/sass/blocks/menu.scss
@@ -48,3 +48,9 @@
 .menu-padding {
   padding-bottom: 80px;
 }
+.po-pay-padding {
+  padding-bottom: 165px;
+}
+.new-order-padding {
+  padding-bottom: 190px;
+}
