--- a/sass/blocks/tabs.scss
+++ b/sass/blocks/tabs.scss
@@ -1,5 +1,5 @@
 .tabs {
-  margin-top: -4em;
+  margin-top: -80px;
 
   .input--select {
     min-width: 120px;
@@ -9,6 +9,7 @@
     }
   }
 }
+
 .tabs-nav {
   position: relative;
   display: flex;
