--- a/sass/libs/helpers.scss
+++ b/sass/libs/helpers.scss
@@ -141,6 +141,9 @@ small, .small {
 .p-20 {
   padding: 20px!important;
 }
+.pb-60 {
+  padding-bottom: 60px!important;
+}
 
 .color-red {
   color: $font-color-red;
