--- a/sass/blocks/referral-table.scss
+++ b/sass/blocks/referral-table.scss
@@ -6,18 +6,13 @@
 
   &__list {
     max-width: 100%;
+    max-height: 500px;
     display: flex;
     overflow: auto;
     padding-bottom: 40px;
-
-    &::after {
-      content: '';
-      flex-shrink: 0;
-      display: inline-block;
-      width: 30px;
-      height: 40px;
-    }
+    margin-bottom: 50px;
   }
+  &::before,
   &::after {
     content: '';
     position: absolute;
@@ -27,6 +22,12 @@
     width: 30px;
     z-index: 9;
     background: rgba(255,255,255,.8);
+  }
+  &::before {
+    top: auto;
+    left: 0;
+    width: 100%;
+    height: 30px;
   }
 
   th, td {
