--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -27,4 +27,13 @@
     top: 10px;
     right: 10px;
   }
+
+  .we-chat-img {
+    margin: 15px auto 0;
+
+    img {
+      max-width: 100%;
+      width: 236px;
+    }
+  }
 }
