--- a/sass/libs/helpers.scss
+++ b/sass/libs/helpers.scss
@@ -7,6 +7,12 @@ small, .small {
 .d-flex {
   display: flex;
 }
+.f-wrap {
+  flex-wrap: wrap;
+}
+.self-start {
+  align-self: start;
+}
 .flex-column {
   flex-direction: column;
 }
@@ -144,6 +150,9 @@ small, .small {
 .pb-60 {
   padding-bottom: 60px!important;
 }
+.mt-0 {
+  margin-top: 0!important;
+}
 
 .color-red {
   color: $font-color-red;
@@ -168,4 +177,7 @@ small, .small {
 }
 .warning-bg {
   background-color: $u-yellow;
+}
+.svg--muted {
+  opacity: .45;
 }
