--- a/sass/bem/add-file.scss
+++ b/sass/bem/add-file.scss
@@ -5,6 +5,7 @@
   flex-shrink: 0;
   border-radius: 3px;
   border: 1px solid $silver-big;
+  background-color: transparent;
 
   &--big {
     width: 70px;
