--- a/sass/bem/copy-btn.scss
+++ b/sass/bem/copy-btn.scss
@@ -1,6 +1,6 @@
 .copy-btn {
-  width: 2.5em;
-  height: 2.5em;
+  width: 40px;
+  height: 40px;
   flex-shrink: 0;
   border-radius: 3px;
   background: #fff;
@@ -8,4 +8,5 @@
   align-items: center;
   justify-content: center;
   border: 0;
+  padding: 0;
 }
