--- a/sass/blocks/order.scss
+++ b/sass/blocks/order.scss
@@ -26,7 +26,7 @@
       margin-left: -10px;
 
       .input {
-        padding: 0 10px;
+        padding: 0 25px 0 10px;
         height: 35px;
       }
     }
