--- a/sass/libs/helpers.scss
+++ b/sass/libs/helpers.scss
@@ -57,11 +57,7 @@ small, .small {
 }
 
 .input-hide {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  display: none;
 }
 .relative {
   position: relative;
