--- a/sass/blocks/menu.scss
+++ b/sass/blocks/menu.scss
@@ -48,7 +48,7 @@
 .menu-padding {
   padding-bottom: 80px;
 }
-.po-pay-padding {
+.to-pay-padding {
   padding-bottom: 165px;
 }
 .new-order-padding {
