--- a/sass/bem/alarm-warning.scss
+++ b/sass/bem/alarm-warning.scss
@@ -1,6 +1,22 @@
 .alarm-warning {
   background-color: $u-alarm;
-  padding: 20px;
+  padding: 25px 20px;
   border-radius: 3px;
   font-size: .875em;
+
+  &__link {
+    position: relative;
+    padding-right: 20px;
+
+    &.active .toggle-icon {
+      transform: rotate(-90deg);
+    }
+  }
+}
+
+.toggle-icon {
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: rotate(90deg);
 }
