--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -20,13 +20,14 @@
     transform: translateY(-50%);
     background-color: #fff;
     border-radius: 3px;
-    padding: 40px 20px;
+    padding: 40px 20px 30px;
   }
 
   &__close {
     position: absolute;
     top: 10px;
     right: 10px;
+    background-color: #fff;
   }
 
   .we-chat-img {
