--- a/sass/libs/helpers.scss
+++ b/sass/libs/helpers.scss
@@ -2,7 +2,7 @@ small, .small {
   font-size: .875em;
 }
 .d-none {
-    display: none;
+    display: none!important;
 }
 .d-flex {
   display: flex;
@@ -12,6 +12,9 @@ small, .small {
 }
 .self-start {
   align-self: start;
+}
+.align-start {
+  align-items: flex-start!important;
 }
 .flex-column {
   flex-direction: column;
@@ -66,6 +69,9 @@ small, .small {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+.text-bold {
+  font-weight: 700;
 }
 
 .pt-25 {
@@ -149,12 +155,21 @@ small, .small {
 .mt-0 {
   margin-top: 0!important;
 }
+.pb-20 {
+  padding-bottom: 20px!important;
+}
+.mr-30 {
+  margin-right: 30px!important;
+}
 
 .color-red {
   color: $font-color-red;
 }
 .color-ac {
   color: $font-color-silver;
+}
+.color-blue {
+  color: $color-blue;
 }
 .text {
   margin: 0;
@@ -176,4 +191,11 @@ small, .small {
 }
 .svg--muted {
   opacity: .45;
+}
+.reset-btn {
+  border: 0;
+  background: none;
+}
+.underline {
+  text-decoration: underline;
 }
