--- a/sass/blocks/tooltip.scss
+++ b/sass/blocks/tooltip.scss
@@ -1,23 +1,6 @@
-.tooltip {
-
-  &__content {
-    display: none;
-    position: absolute;
-    left: -5px;
-    top: 25px;
-    right: -5px;
-    background-color: $silver-normal;
-    z-index: 9;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
-    padding: 10px;
-  }
-
-  .active + &__content {
-    display: block;
-  }
-}
 .tooltip-btn {
   background: none;
   border: 0;
+  padding: 0;
+  outline: none;
 }
