--- a/sass/bem/copy-btn.scss
+++ b/sass/bem/copy-btn.scss
@@ -1,4 +1,5 @@
 .copy-btn {
+  position: relative;
   width: 40px;
   height: 40px;
   flex-shrink: 0;
@@ -9,4 +10,15 @@
   justify-content: center;
   border: 0;
   padding: 0;
+
+  &.copied::after {
+    content: '';
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    width: 10px;
+    height: 10px;
+    background-image: url('../img/copied.svg');
+    background-size: 100% 100%;
+  }
 }
