--- a/sass/blocks/shipping-address.scss
+++ b/sass/blocks/shipping-address.scss
@@ -18,18 +18,18 @@
     &.active svg {
       transform: rotate(-90deg);
     }
+    &.active + .shipping-address__content {
+      display: block;
+    }
   }
   &__content {
+    display: none;
     padding: 35px 20px 0;
     margin-top: -10px;
     background: #F5F5F5;
     border: 1px solid $silver-big;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.08);
     border-radius: 3px;
-
-    &.active .shipping-address__bottom {
-      display: none;
-    }
   }
   &__bottom {
     border-top: 1px solid $silver-big;
