--- a/sass/blocks/method.scss
+++ b/sass/blocks/method.scss
@@ -5,7 +5,7 @@
     padding-left: 15px;
 
     .method__title {
-      width: 40%;
+      width: 43%;
     }
   }
   &__label {
@@ -32,6 +32,7 @@
   }
   input:not(:disabled):checked + &__label {
     opacity: 1;
+    border-color: #333;
 
     .checkbox__icon {
       border-color: #000;
@@ -50,6 +51,7 @@
     line-height: 1.25;
   }
   &__title {
+    width: 30%;
     min-width: 80px;
     padding-right: 20px;
   }
