--- a/sass/page/reviews.scss
+++ b/sass/page/reviews.scss
@@ -13,9 +13,6 @@
     line-height: 1;
     margin-top: -3px;
   }
-  &__bottom {
-    margin-top: 60px;
-  }
 }
 
 .reviews-img {
@@ -32,6 +29,19 @@
     top: 0;
     width: 100%;
     height: auto;
+  }
+
+  &__text svg text {
+    font-size: 1.375em;
+    color: #FFFFFF;
+    line-height: .8;
+    text-shadow: 0px 1px 2px #CA7334;
+  }
+  &__text {
+    position: absolute;
+    left: 55%;
+    top: 28%;
+    width: 15.77%;
   }
 }
 
