--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -21,6 +21,7 @@
     background-color: #fff;
     border-radius: 3px;
     padding: 40px 20px 30px;
+    z-index: 3;
   }
 
   &__close {
@@ -40,8 +41,22 @@
   }
 
   &--review {
+    background-color: #fff;
+
+    .for-close-modal {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(33,33,33,.9);
+      z-index: 1;
+    }
+
     .modal__content {
       padding: 0;
+      left: 20px;
+      right: 20px;
     }
     .modal__close {
       top: 20px;
@@ -50,6 +65,51 @@
     }
     .reviews {
       padding-bottom: 10px;
+    }
+
+    .modal-review-top {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      transform: translateY(-100%);
+      margin-top: -20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .modal-big-text {
+      font-size: 50px;
+      line-height: .9;
+      text-transform: uppercase;
+      color: #282828;
+    }
+    .modal-review-bottom {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      align-items: flex-start;
+      transform: translateY(100%);
+      margin-bottom: -40px;
+      color: #fff;
+
+      .text {
+        margin-bottom: 4px;
+      }
+
+      .grow-1 {
+        padding-left: 25px;
+      }
+
+      .social-link {
+        margin-left: 5px;
+        vertical-align: top;
+      }
+    }
+    .modal-phone {
+      font-size: 1.2em;
     }
   }
 
@@ -67,5 +127,20 @@
       right: 20px;
       background-color: $color-f5;
     }
+  }
+}
+
+@media screen and (max-height: 640px) {
+  .modal {
+    overflow: auto;
+  }
+  .modal__content {
+    top: 80px;
+    transform: none;
+  }
+}
+@media screen and (max-width: 370px) {
+  .modal--review .modal-big-text {
+    font-size: 40px;
   }
 }
