--- a/sass/blocks/menu.scss
+++ b/sass/blocks/menu.scss
@@ -50,6 +50,10 @@
 
 .menu-padding {
   padding-bottom: 80px;
+
+  &--banner {
+    padding-bottom: 180px;
+  }
 }
 .to-pay-padding {
   padding-bottom: 165px;
