--- a/sass/blocks/messages.scss
+++ b/sass/blocks/messages.scss
@@ -134,3 +134,13 @@
     }
   }
 }
+
+.message-item {
+  max-width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+
+  &.right {
+    margin-left: auto;
+  }
+}
