--- a/sass/blocks/quantity-place.scss
+++ b/sass/blocks/quantity-place.scss
@@ -31,10 +31,9 @@
     }
   }
   &__list {
-    padding-top: 15px;
-
-    .reset-list {
-      height: 113px;
-    }
+    padding-top: 10px;
+  }
+  .order-scroll-layout {
+    height: 143px;
   }
 }
