--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,6 +64,8 @@
 @import "blocks/order-slider";
 @import "blocks/quantity-place";
 @import "blocks/shipping-address";
+@import "blocks/banner";
+@import "blocks/counter";
 
 /*Страницы*/
 @import "page/sign-in";
@@ -71,3 +73,4 @@
 @import "page/my-information";
 @import "page/home";
 @import "page/reviews";
+@import "page/storage";
