--- a/sass/blocks/images-slider.scss
+++ b/sass/blocks/images-slider.scss
@@ -5,6 +5,9 @@
   padding: 5px 0 8px;
 
   &__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 70px;
     height: 70px;
     flex-shrink: 0;
