--- a/sass/blocks/order-slider.scss
+++ b/sass/blocks/order-slider.scss
@@ -9,10 +9,10 @@
   }
   &__nav {
     display: flex;
+    justify-content: space-between;
 
-    li {
-      flex-basis: 33.33%;
-      padding: 0 6px;
+    & > * {
+      flex-basis: 31%;
     }
   }
   &__link {
@@ -20,7 +20,10 @@
     text-align: center;
     padding: 4px;
     color: $font-color-silver;
+    border: 0;
+    background: none;
     border-bottom: 2px solid $silver-big;
+    outline: none;
 
     &.active {
       border-color: $color-blue;
@@ -29,7 +32,7 @@
   }
   &__tab {
     display: none;
-    padding-top: 15px;
+    padding-top: 10px;
 
     &.active {
       display: block;
@@ -37,14 +40,28 @@
     .reset-list {
       display: flex;
       flex-direction: column;
-      height: 180px;
       margin-bottom: 15px;
+      padding-bottom: 15px;
 
       li {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 3px 0;
+        padding: 5px 0;
+
+        &.border-bottom {
+          min-height: 50px;
+          &:last-child {
+            border-bottom: 0;
+          }
+        }
+      }
+      .input--select {
+        width: 160px;
+
+        @media screen and (max-width: 377px) {
+          width: 130px;
+        }
       }
     }
   }
@@ -108,5 +125,33 @@
   &.active {
     border-color: $color-blue;
     color: #333;
+  }
+}
+
+.top-scroll-content {
+  position: relative;
+  height: 30px;
+  margin-top: -30px;
+  margin-left: -20px;
+  margin-right: -20px;
+  background-color: rgba(255,255,255,.9);
+}
+
+.order-scroll-layout {
+  margin-left: -12px;
+  margin-right: -12px;
+  padding-left: 12px;
+  padding-right: 12px;
+  height: 200px;
+  overflow: auto;
+}
+.order-scroll-content {
+  position: relative;
+  margin-left: -6px;
+  margin-right: -6px;
+
+  .reset-list > li {
+    padding-left: 6px;
+    padding-right: 6px;
   }
 }
